--- a/frontend-bingo-velez/src/app/core/components/sidenav/sidenav.component.html
+++ b/frontend-bingo-velez/src/app/core/components/sidenav/sidenav.component.html
@@ -40,11 +40,11 @@
               class="hide-menu">Configuraciones</span></a>
         </li>
 
-        <li class="sidebar-item">
+        <!-- <li class="sidebar-item">
           <a class="sidebar-link waves-effect waves-dark sidebar-link" href="table-basic.html" aria-expanded="false"
             [routerLink]="['/login']" (click)="logOut()"><i class="mdi me-2 mdi-table"></i><span
               class="hide-menu">Cerrar sesion</span></a>
-        </li>
+        </li> -->
       </ul>
 
     </nav>
