--- a/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.html
+++ b/frontend-bingo-velez/src/app/modules/home/pages/home/home.component.html
@@ -592,10 +592,21 @@
       </section>
 
       <section class="cards">
+   
+        <form [formGroup]="partidasForm">
+          <mat-form-field style="width: 90%;" appearance="outline">
+            <mat-select placeholder="Partidas" formControlName="partida_id" (selectionChange)="selectPartida($event)">
+              <mat-option [value]="partida.id" *ngFor="let partida of partidas">
+                {{ partida.name }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </form>
+
         <div class="card-cardboard" *ngFor="let item of items">
           <div class="top-content">
             <p class="carton-number">{{ item.index + 1 }}</p>
-            <select type="text" class="input-name">
+            <select type="text" class="input-name" (change)="selectPlayer(item, $event)">
               <option [value]="">Jugadores</option>
               <option [value]="player.id" *ngFor="let player of players">
                 {{ player.name }}
@@ -618,6 +629,139 @@
               </thead>
               <tbody>
                 <tr class="t-body">
+                  <td>
+                    {{ item.row1[0].number }}
+                    <span [ngClass]="item.row1[0].class === '' ? 'circle-cover' : item.row1[0].class"
+                      *ngIf="item.row1[0].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row2[0].number }}
+                    <span [ngClass]="item.row2[0].class === '' ? 'circle-cover' : item.row2[0].class"
+                      *ngIf="item.row2[0].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row3[0].number }}
+                    <span [ngClass]="item.row3[0].class === '' ? 'circle-cover' : item.row3[0].class"
+                      *ngIf="item.row3[0].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row4[0].number }}
+                    <span [ngClass]="item.row4[0].class === '' ? 'circle-cover' : item.row4[0].class"
+                      *ngIf="item.row4[0].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row5[0].number }}
+                    <span [ngClass]="item.row5[0].class === '' ? 'circle-cover' : item.row5[0].class"
+                      *ngIf="item.row5[0].selected"></span>
+                  </td>
+                </tr>
+                <tr class="t-body">
+                  <td>
+                    {{ item.row1[1].number }}
+                    <span [ngClass]="item.row1[1].class === '' ? 'circle-cover' : item.row1[1].class"
+                      *ngIf="item.row1[1].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row2[1].number }}
+                    <span [ngClass]="item.row2[1].class === '' ? 'circle-cover': item.row2[1].class"
+                      *ngIf="item.row2[1].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row3[1].number }}
+                    <span [ngClass]="item.row3[1].class === '' ? 'circle-cover': item.row3[1].class"
+                      *ngIf="item.row3[1].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row4[1].number }}
+                    <span [ngClass]="item.row4[1].class === '' ? 'circle-cover': item.row4[1].class"
+                      *ngIf="item.row4[1].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row5[1].number }}
+                    <span [ngClass]="item.row5[1].class === '' ? 'circle-cover': item.row5[1].class"
+                      *ngIf="item.row5[1].selected"></span>
+                  </td>
+                </tr>
+                <tr class="t-body middle-row">
+                  <td>
+                    {{ item.row1[2].number }}
+                    <span [ngClass]="item.row1[2].class === '' ? 'circle-cover': item.row1[2].class"
+                      *ngIf="item.row1[2].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row2[2].number }}
+                    <span [ngClass]="item.row2[2].class === '' ? 'circle-cover': item.row2[2].class"
+                      *ngIf="item.row2[2].selected"></span>
+                  </td>
+                  <td [ngClass]="{ 'td-color': item.row3[2].selected }">
+                    <img [src]="item.row3[2].image" />
+                  </td>
+                  <td>
+                    {{ item.row4[2].number }}
+                    <span [ngClass]="item.row4[2].class === '' ? 'circle-cover': item.row4[2].class"
+                      *ngIf="item.row4[2].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row5[2].number }}
+                    <span [ngClass]="item.row5[2].class === '' ? 'circle-cover': item.row5[2].class"
+                      *ngIf="item.row5[2].selected"></span>
+                  </td>
+                </tr>
+                <tr class="t-body">
+                  <td>
+                    {{ item.row1[3].number }}
+                    <span [ngClass]="item.row1[3].class === '' ? 'circle-cover': item.row1[3].class"
+                      *ngIf="item.row1[3].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row2[3].number }}
+                    <span [ngClass]="item.row2[3].class === '' ? 'circle-cover': item.row2[3].class"
+                      *ngIf="item.row2[3].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row3[3].number }}
+                    <span [ngClass]="item.row3[3].class === '' ? 'circle-cover': item.row3[3].class"
+                      *ngIf="item.row3[3].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row4[3].number }}
+                    <span [ngClass]="item.row4[3].class === '' ? 'circle-cover': item.row4[3].class"
+                      *ngIf="item.row4[3].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row5[3].number }}
+                    <span [ngClass]="item.row5[3].class === '' ? 'circle-cover': item.row5[3].class"
+                      *ngIf="item.row5[3].selected"></span>
+                  </td>
+                </tr>
+                <tr class="t-body last-row">
+                  <td>
+                    {{ item.row1[4].number }}
+                    <span [ngClass]="item.row1[4].class === '' ? 'circle-cover': item.row1[4].class"
+                      *ngIf="item.row1[4].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row2[4].number }}
+                    <span [ngClass]="item.row2[4].class === '' ? 'circle-cover': item.row2[4].class"
+                      *ngIf="item.row2[4].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row3[4].number }}
+                    <span [ngClass]="item.row3[4].class === '' ? 'circle-cover': item.row3[4].class"
+                      *ngIf="item.row3[4].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row4[4].number }}
+                    <span [ngClass]="item.row4[4].class === '' ? 'circle-cover': item.row4[4].class"
+                      *ngIf="item.row4[4].selected"></span>
+                  </td>
+                  <td>
+                    {{ item.row5[4].number }}
+                    <span [ngClass]="item.row5[4].class === '' ? 'circle-cover': item.row5[4].class"
+                      *ngIf="item.row5[4].selected"></span>
+                  </td>
+                </tr>
+                <!-- <tr class="t-body">
                   <td>
                     {{ item.row1[0].number }}
                     <span
@@ -797,7 +941,7 @@
                       *ngIf="item.row5[4].selected"
                     ></span>
                   </td>
-                </tr>
+                </tr> -->
               </tbody>
             </table>
           </div>
